# task-manager-api

./: .cursorrules  .env.example  Makefile  README.md  SECURITY_REVIEW.md  bandit-report.json  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_crud.py  test_database.py  test_tasks.py
